# MLX-GRPO

./: .gitignore  NANOCHAT_GRPO_GUIDE.md  PR_DESCRIPTION.md  QUICK_START.md  QUICK_VISION_START.md  README.md  VISION_MODELS.md  convert_nanochat.py  mlx-grpo.py  pyproject.toml  test_nanochat_direct.py  test_questions.txt
.qoder/repowiki/zh/content/: 安装与环境配置.md  快速入门.md  故障排除.md  贡献指南与许可证.md  项目概述.md
.qoder/repowiki/zh/content/GRPO训练框架/: GRPO训练框架.md  GRPO训练流程.md  奖励函数.md  模型管理.md
.qoder/repowiki/zh/content/模型转换与推理/: 模型推理.md  模型转换.md  模型转换与推理.md
.qoder/repowiki/zh/content/配置系统详解/: 运行时配置覆盖.md  配置文件详解.md  配置系统详解.md
.qoder/repowiki/zh/content/高级功能与自定义/: 模型量化控制.md  自定义分词器适配.md  自定义奖励函数.md  高级功能与自定义.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
configs/: medium.toml  nanochat_d32.toml  nanochat_d32_test.toml  nanochat_grpo.toml  nanochat_test.toml  prod.toml  smoke_test.toml  test.toml  ultra_light.toml
utils/: .test_imports.py  README.md  __init__.py  convert_model.py  convert_vision_model.py  evaluate_model.sh  inference.py  inference_vision.py
