[project]
name = "mlx-grpo"
version = "0.2.0"
description = "A pure MLX-based training pipeline for fine-tuning LLMs using GRPO on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.2.0",
    "mlx-lm>=0.28.3",
    "mlx>=0.29.3",
    "transformers>=4.56.2",
]
